--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                             <a href="#" class="btn btn-default" onclick="openNav(false)"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> NEW CLASSIFIED</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> FILTER</a>
+                            <a id="filter-button" href="#" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> FILTER</a>
                         </li>
                         <li>
-                            <input id="searchBox" type="text" name="" class="form-control" onclick="filter()">
+                            <input id="search-box" type="text" name="" class="form-control" >
                         </li>
                         
                     </ul>
